text content change in user  jobs matches

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -56,6 +56,7 @@
 		"moreSkills":"Mehr Fähigkeiten",
 		"applyNow":"Jetzt bewerben",
 		"candidateMatches":"Kandidaten-Matches",
+		"jobsMatches":"Jobs Übereinstimmungen",
 		"salary": "Zahlen",
 		"score":"SPIELSTAND",
 		"viewAll":"Alle ansehen",
