--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -56,6 +56,7 @@
 		"moreSkills":"More Skills",
 		"applyNow":"Apply Now",
 		"candidateMatches":"Candidate Matches",
+		"jobsMatches":"Jobs Matches",
 		"salary": "Pay",
 		"score":"SCORE",
 		"viewAll":"View all",
