--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -56,6 +56,7 @@
         "moreSkills": "Más habilidades",
         "applyNow": "Aplicar ahora",
         "candidateMatches": "Coincidencias de candidatos",
+		"jobsMatches":"Trabajos Partidos",
         "score": "PUNTUACIÓN",
         "viewAll": "Ver todo",
         "aboutUs": "Sobre nosotros",
