1. To fix the about the company should not manditory and photo upload issue in employer profile creation 2. To change the employer language can be mentioned as langauge preference 3. To change the posted jobs to back to jobs in view jobs 4. To create cancel or back button for edit job in posted jobs 5. To fix the job seeker profile creation

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -355,7 +355,8 @@
 		"JobsByCountry": "Jobs nach Ländern",
 		"employer": "Arbeitgeber",
 		"jobseeker": "Arbeitssuchender",
-		"staffingAgency": "Personalagentur"
+		"staffingAgency": "Personalagentur",
+		"backToJobs" : "Zurück zu Jobs"
 	},
 	"postJob":{
 		"postYourJob": "Stellenangebote veröffentlichen"
