--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -365,7 +365,8 @@
 		"JobsByCountry": "Jobs by country",
 		"employer": "Employer",
 		"jobseeker": "Jobseeker",
-		"staffingAgency": "Staffing Agency"
+		"staffingAgency": "Staffing Agency",
+		"backToJobs" : "Back To Jobs"
 	},
 	"postJob":{
 		"postYourJob":"Post Jobs"
