employer dashboard changes and to set the remote option if the remote is yes

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -320,7 +320,8 @@
 		"paidParentalLeave": "Bezahlter Elternurlaub",
 		"teleCommuting": "Telearbeit",
 		"wellnessProgram": "Wellnessprogramm",
-		"paidSickLeaves": "Bezahlter Krankenstand"
+		"paidSickLeaves": "Bezahlter Krankenstand",
+		"remoteOption" :"Wählen Sie die Remote-Option"
 	},
 	"common": {
 		"message": "Nachricht",
