In Job seeker module Language proficiency we can keep native, fluent and intermediate

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -277,7 +277,10 @@
 		"travelRequired": "Reise erforderlich",
 		"niceToHave": "Schön zu haben",
 		"startTime": "Startzeit",
-		"yearOfCompletionGraduation": "Jahr des Abschlusses"
+		"yearOfCompletionGraduation": "Jahr des Abschlusses",
+		"native": "Einheimisch",
+		"intermediate": "Dazwischenliegend",
+		"fluent": "Fließend"
 	}, 
 	"matches":{
 		"shorttotalYearsOfExperience": "Gesamtjahre exp.",
