--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -281,7 +281,10 @@
 		"travelRequired": "Travel Required",
 		"niceToHave": "Nice to have",
 		"startTime": "Start Time",
-		"yearOfCompletionGraduation": "Year of Graduation"
+		"yearOfCompletionGraduation": "Year of Graduation",
+		"native": "NAtive",
+		"intermediate": "Intermediate",
+		"fluent": "Fluent"
 	}, 
 	"matches":{
 		"shorttotalYearsOfExperience": "Total Years of Exp.",
