Add empty validation error message for the Language proficiency in user module

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -282,7 +282,7 @@
 		"niceToHave": "Nice to have",
 		"startTime": "Start Time",
 		"yearOfCompletionGraduation": "Year of Graduation",
-		"native": "NAtive",
+		"native": "Native",
 		"intermediate": "Intermediate",
 		"fluent": "Fluent"
 	}, 
