--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -55,7 +55,7 @@
         "missing": "Desaparecido",
         "moreSkills": "Más habilidades",
         "applyNow": "Aplicar ahora",
-        "candidateMatches": "Coincidencias de candidatos",
+        "candidateMatches": "Publicar coincidencias de empleo Ver",
 		"jobsMatches":"coincidencias de trabajos",
         "score": "PUNTUACIÓN",
         "viewAll": "Ver todo",
