--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -55,7 +55,7 @@
 		"missing":"Missing",
 		"moreSkills":"More Skills",
 		"applyNow":"Apply Now",
-		"candidateMatches":"Candidate Matches",
+		"candidateMatches":"Post Job Matches View",
 		"jobsMatches":"Jobs Matches",
 		"salary": "Pay",
 		"score":"SCORE",
