--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -50,7 +50,7 @@
 		"salary":"Salary",
 		"sapSkills":"SAP Skills",
 		"applied":"Applied",
-		"description":"Responsibility",
+		"description":"Responsibilities",
 		"apply":"Apply",
 		"missing":"Missing",
 		"moreSkills":"More Skills",
