1. To change the label for employer profile page, for new it shows - Create profile , for existing user it show - Edit profile 2. To create the delete account for user

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -147,7 +147,8 @@
 		"enterNumberOfPositions": "Geben Sie die Anzahl der Positionen ein",
 		"validStatus": "Bitte wählen Sie den gültigen Status",
 		"notificationSetting" : "Benachrichtigungseinstellung",
-		"viewjobs":"Job anzeigen"
+		"viewjobs":"Job anzeigen",
+		"editProfile" :"Profil bearbeiten"
 	},
 	"auth":{
 		"findRightPlace":"Finden Sie Ihren richtigen Ort",
@@ -181,7 +182,8 @@
 		"profile": "Profil",
 		"notification": "Benachrichtigung",
 		"settings": "Einstellungen",
-		"logout": "Logout"
+		"logout": "Logout",
+		"deleteaccount" : "Konto löschen"
 	},
 	"nav":{
 		"hiringTrend":"Einstellungstrend",
