--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -143,7 +143,8 @@
 	    "couldNotFind":"No pude encontrar sus habilidades de SAP",
 	    "addNewSkills":"Agregue una nueva habilidad de SAP",
 		"notificationSetting" :"Notificación de configuración",
-		"viewjobs":"Ver trabajo"
+		"viewjobs":"Ver trabajo",
+		"editProfile" :"Editar perfil"
 	},
 	"auth":{
 	    "findRightPlace":"Encuentra tu lugar correcto",
@@ -177,7 +178,8 @@
         "profile": "Perfil",
         "notification": "Notificación",
         "settings": "Configuración",
-        "logout": "Cerrar sesión"
+        "logout": "Cerrar sesión",
+		"deleteaccount" : "Borrar cuenta"
 	},
 	"nav": {
 	    "hiringTrend":"Tendencia de contratación",
