--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -164,7 +164,10 @@
 		"password":"Passwort",
 		"rememberMe":"Remember Me",
 		"forgotPassword":"Passwort vergessen?",
-		"haveAccount":"Sie haben kein Konto?"
+		"haveAccount":"Sie haben kein Konto?",
+		"userName" :"Nutzername",
+		"employerLogin" : "Arbeitgeber-Login",
+		"userLogin" :"Login für Arbeitssuchende"
 	},
 	"profileSettings":{
 		"photo": "Profilbild",
