--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -164,7 +164,10 @@
 		"password":"Passwort",
 		"rememberMe":"Remember Me",
 		"forgotPassword":"Passwort vergessen?",
-		"haveAccount":"Sie haben kein Konto?"
+		"haveAccount":"Sie haben kein Konto?",
+		"userName" :"Nutzername",
+		"employerLogin" : "Arbeitgeber-Login",
+		"userLogin" :"Login für Arbeitssuchende"
 	},
 	"profileSettings":{
 		"photo": "Profilbild",
@@ -359,7 +362,8 @@
 		"addCalenders":"Kalender hinzufügen",
 		"AddInviteLink":"Einladungslink hinzufügen",
 		"inviteSettingsAddCustom":"Klicken Sie hier, um den Scheduler-Link hinzuzufügen",
-		"addResume": "Lebenslauf hinzufügen"
+		"addResume": "Lebenslauf hinzufügen",
+		"meetingLink" :"Meeting-Link"
 	},
 	"home":{
 		"title": "Stellen Sie Experten ein oder werden Sie für jeden Job und zu jeder Zeit eingestellt",
