--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -171,7 +171,11 @@
 		"password":"Password",
 		"rememberMe":"Remember Me",
 		"forgotPassword":"Forgot Password?",
-		"haveAccount":"Don't have an account?"
+		"haveAccount":"Don't have an account?",
+		"userName" :"Username",
+		"employerLogin" : "Employer Login",
+		"userLogin" :"Jobseeker Login"
+		
 		},
 	"profileSettings":{
 		"photo":"Profile Image",
@@ -372,7 +376,8 @@
 		"inviteSettingsTitle":"Click here to add the calendly",
 		"inviteSettingsAddCustom":"Click here to add the Other Link",
 		"AddInviteLink":"Add Invite Link",
-		"addResume": "Add Resume"
+		"addResume": "Add Resume",
+		"meetingLink" :"Meeting Link"
 	},
 	"home": {
 		"title": "Hire experts or be hired for any job, any time",
